--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <title>「ｒｅ：Ｌｉｖｅ」</title>
 <!-- InstanceEndEditable -->
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="a collection of stuff and things from the web archive.">
-<meta name="keywords" content="buttons, blinkies, gifs, icons, 00s, 90s, videogames, anime">
+<meta name="description" content="ren's reimagined rondeau">
+<meta name="keywords" content="ren">
 <meta name="author" content="omnisairen">
 <link rel="icon" type="image/png" href="images/home/pupilpng.png" sizes="1000x1000" />
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/sometype-mono" type="text/css"/>
