--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -38,9 +38,8 @@
 
         <div id="content">
             <p>
-						here's a list of 'characters' i love that i rate on a scale of my favoriteness ~ hehe
-            </p>
-						<p>an incomplete list</p>
+						here's a list of 'characters' i love that i rate on a scale of my favoriteness ~ in no particular order
+             - an ongoing list</p>
         </div>
 				<div id="content2">
 								<div class="label2">
@@ -55,7 +54,8 @@
 						<br><br><h3>YoRHa No. 2 Type: B</h3>            <ol class="playlist_info">
 							<li>Origin: NieR:Automata</li>
 							<li>Gender: Female Android</li>
-							<li>Rating: SSS+</li><br>
+							<li>Rating: SSS+</li>
+							<li>Notes: My waifu <3</li><br>
             </ol>
 
 
@@ -69,7 +69,8 @@
 						<br><br><h3>Ken Kaneki</h3>            <ol class="playlist_info">
 							<li>Origin: Tokyo Ghoul</li>
 							<li>Gender: Male Ghoul</li>
-							<li>Rating: S</li><br>
+							<li>Rating: S</li>
+							<li>Notes: A character with this many personalities is bound to strike a chord with me, it helps that each one is phenomal (Haise Sasaki not included)</li><br>
             </ol>
 
         </div>
@@ -79,7 +80,9 @@
 								<br><br><h3>Hitagi Senjougahara</h3>            <ol class="playlist_info">
 									<li>Origin: Monogatari Series</li>
 									<li>Gender: Female</li>
-									<li>Rating: SS+</li><br>
+									<li>Rating: SS+</li>
+									<li>Notes: Araragi doesn't deserve her.</li><br>
+
 								</ol>
 						</div>
 
@@ -88,39 +91,37 @@
 								<br><br><h3>Nagisa Shiota</h3>            <ol class="playlist_info">
 									<li>Origin: Assassination Classroom</li>
 									<li>Gender: Male</li>
-									<li>Rating: A</li><br>
+									<li>Rating: A+</li>
+									<li>Notes: My life goal of a character</li><br>
 								</ol>
 
 
 						</div>
 
-
-				<div id="ccontent">
-								<img class="auditorium" src="../../images/randomlove/characters/mk.png" style="width: 160px;"/>
-								<br><br><h3>Mimikyu</h3>            <ol class="playlist_info">
-									<li>Origin: Pokemon</li>
-									<li>Gender: Unknown</li>
-									<li>Rating: B</li><br>
-								</ol>
-
-
+						<div id="ccontent">
+										<img class="auditorium" src="../../images/randomlove/characters/ey.jpg" style="width: 160px;"/>
+										<br><br><h3>Eto Yoshimura </h3>            <ol class="playlist_info">
+											<li>Origin: Tokyo Ghoul</li>
+											<li>Gender: Female</li>
+											<li>Rating: S+</li>
+											<li>Notes: AUH♡♡ULKNNNHNHNH♡nnnnnnNNNHHHHHHAHHHH ♡hhNLNBN♡UNHNUNJHN♡ULHNUNHU♡♡ ♡</li><br>
+										</ol>
 						</div>
 
+									<div id="ccontent">
+													<img class="auditorium" src="../../images/randomlove/characters/jb.png" style="width: 160px;"/>
+													<br><br><h3>Jabami Yumeko </h3>            <ol class="playlist_info">
+														<li>Origin: Kakegurui</li>
+														<li>Gender: Female</li>
+														<li>Rating: S</li>
+														<li>Notes: She's the reason I pretend to like gambling</li><br>
+													</ol>
+									</div>
 
 
 
 
 
-			<div id="ccontent">
-							<img class="auditorium" src="../../images/randomlove/characters/em.jpg" style="width: 160px;"/>
-							<br><br><h3>Emil</h3>            <ol class="playlist_info">
-								<li>Origin: NieR: Gestalt</li>
-								<li>Gender: Emil</li>
-								<li>Rating: A</li><br>
-							</ol>
-
-
-	</div>
 
 
 			<div id="ccontent">
@@ -128,23 +129,149 @@
 							<br><br><h3>Great Fairy</h3>            <ol class="playlist_info">
 								<li>Origin: Ocarina of Time</li>
 								<li>Gender: Female</li>
-								<li>Rating: B+</li><br>
+								<li>Rating: B</li>
+								<li>Notes: What's not to like? Great>check Fairy>check</li><br>
 							</ol>
 
 
 	</div>
 
 
-	<div id="ccontent">
-					<img class="auditorium" src="../../images/randomlove/characters/lm.jpg" style="width: 160px;"/>
-					<br><br><h3>Black Luma</h3>            <ol class="playlist_info">
-						<li>Origin: Super Mario Galaxy</li>
-						<li>Gender: Luma</li>
-						<li>Rating: D</li><br>
-					</ol>
+
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/te.jpg" style="width: 160px;"/>
+							<br><br><h3>Takane Enomoto</h3>            <ol class="playlist_info">
+								<li>Origin: Kagerou Project</li>
+								<li>Gender: Female/Computer</li>
+								<li>Rating: A-</li>
+								<li>Notes: <strike>shewasmyfirstwaifu onlyreplacedby2b</strike></li><br>
+							</ol>
+					</div>
 
 
+				<div id="ccontent">
+								<img class="auditorium" src="../../images/randomlove/characters/gy.jpg" style="width: 160px;"/>
+								<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
+									<li>Origin: Dark Souls</li>
+									<li>Gender: Female</li>
+									<li>Rating: B</li>
+									<li>Notes: Amazing chest ahead</li><br>
+								</ol>
 			</div>
+
+
+
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/ps.png" style="width: 160px;"/>
+							<br><br><h3>Psykos </h3>            <ol class="playlist_info">
+								<li>Origin: One Punch Man</li>
+								<li>Gender: Female</li>
+								<li>Rating: B</li>
+								<li>Notes: Monster Goddess Psykos. Need I say any more?</li><br>
+							</ol>
+			</div>
+
+
+						<div id="ccontent">
+										<img class="auditorium" src="../../images/randomlove/characters/em.jpg" style="width: 160px;"/>
+										<br><br><h3>Emil</h3>            <ol class="playlist_info">
+											<li>Origin: NieR: Gestalt</li>
+											<li>Gender: Emil</li>
+											<li>Rating: A</li>
+											<li>Notes: His return in Automata is the definition of /ICONIC/ and EY:VH is unfair ;;</li><br>
+										</ol>
+
+
+				</div>
+
+
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/.png" style="width: 160px;"/>
+							<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
+								<li>Origin: Dark Souls</li>
+								<li>Gender: Female</li>
+								<li>Rating: B-</li>
+								<li>Notes: </li><br>
+							</ol>
+			</div>
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/.png" style="width: 160px;"/>
+							<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
+								<li>Origin: Dark Souls</li>
+								<li>Gender: Female</li>
+								<li>Rating: B-</li>
+								<li>Notes: </li><br>
+							</ol>
+			</div>
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/.png" style="width: 160px;"/>
+							<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
+								<li>Origin: Dark Souls</li>
+								<li>Gender: Female</li>
+								<li>Rating: B-</li>
+								<li>Notes: </li><br>
+							</ol>
+			</div>
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/.png" style="width: 160px;"/>
+							<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
+								<li>Origin: Dark Souls</li>
+								<li>Gender: Female</li>
+								<li>Rating: B-</li>
+								<li>Notes: </li><br>
+							</ol>
+			</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/ms.png" style="width: 160px;"/>
+							<br><br><h3>Mob </h3>            <ol class="playlist_info">
+								<li>Origin: Mob Psycho 100</li>
+								<li>Gender: Male</li>
+								<li>Rating: B</li>
+								<li>Notes: GET READY WAKE YOUR PSYCHE UP MOB</li><br>
+							</ol>
+			</div>
+
+
+
+							<div id="ccontent">
+											<img class="auditorium" src="../../images/randomlove/characters/mk.png" style="width: 160px;"/>
+											<br><br><h3>Mimikyu</h3>            <ol class="playlist_info">
+												<li>Origin: Pokemon</li>
+												<li>Gender: Unknown</li>
+												<li>Rating: B</li><br>
+											</ol>
+
+
+									</div>
+
+
+
 
 
 			<div id="ccontent">
@@ -159,26 +286,33 @@
 	</div>
 
 
+	<div id="ccontent">
+					<img class="auditorium" src="../../images/randomlove/characters/bs.png" style="width: 160px;"/>
+					<br><br><h3>Baby Slime</h3>            <ol class="playlist_info">
+						<li>Origin: Minecraft</li>
+						<li>Gender: Slime</li>
+						<li>Rating: C (i still love you baby slime im sorry)</li><br>
+					</ol>
+</div>
 
 
 
 			<div id="ccontent">
-							<img class="auditorium" src="../../images/randomlove/characters/te.jpg" style="width: 160px;"/>
-							<br><br><h3>Takane Enomoto</h3>            <ol class="playlist_info">
-								<li>Origin: Kagerou Project</li>
-								<li>Gender: Female/Computer</li>
-								<li>Rating: A-</li><br>
+							<img class="auditorium" src="../../images/randomlove/characters/lm.jpg" style="width: 160px;"/>
+							<br><br><h3>Black Luma</h3>            <ol class="playlist_info">
+								<li>Origin: Super Mario Galaxy</li>
+								<li>Gender: Luma</li>
+								<li>Rating: D</li><br>
 							</ol>
+
+
 					</div>
 
-					<div id="ccontent">
-									<img class="auditorium" src="../../images/randomlove/characters/bs.png" style="width: 160px;"/>
-									<br><br><h3>Baby Slime</h3>            <ol class="playlist_info">
-										<li>Origin: Minecraft</li>
-										<li>Gender: Slime</li>
-										<li>Rating: C (i still love you baby slime im sorry)</li><br>
-									</ol>
-				</div>
+
+
+
+
+
 
 
 
