--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -118,24 +118,35 @@
 													</ol>
 									</div>
 
+									<div id="ccontent">
+													<img class="auditorium" src="../../images/randomlove/characters/tg.jpg" style="width: 160px;"/>
+													<br><br><h3>Toga Himiko </h3>            <ol class="playlist_info">
+														<li>Origin: Boku No Hero Academia</li>
+														<li>Gender: Female</li>
+														<li>Rating: S-</li>
+														<li>Notes: Knives, blood, Camie Utsushimi, mask. She must be cheating smh ♡</li><br>
+													</ol>
+									</div>
+									<div id="ccontent">
+													<img class="auditorium" src="../../images/randomlove/characters/km.png" style="width: 160px;"/>
+													<br><br><h3>Komi-san</h3>            <ol class="playlist_info">
+														<li>Origin: Komi-san Can't Communicate</li>
+														<li>Gender: Female</li>
+														<li>Rating: S</li>
+														<li>Notes: I can't wait for the next volume, also let's not forget her class voted her "goddess" instead of class president</li><br>
+													</ol>
+									</div>
 
 
-
-
-
-
-			<div id="ccontent">
-							<img class="auditorium" src="../../images/randomlove/characters/gf.png" style="width: 160px;"/>
-							<br><br><h3>Great Fairy</h3>            <ol class="playlist_info">
-								<li>Origin: Ocarina of Time</li>
-								<li>Gender: Female</li>
-								<li>Rating: B</li>
-								<li>Notes: What's not to like? Great>check Fairy>check</li><br>
-							</ol>
-
-
-	</div>
-
+									<div id="ccontent">
+													<img class="auditorium" src="../../images/randomlove/characters/ps.png" style="width: 160px;"/>
+													<br><br><h3>Psykos </h3>            <ol class="playlist_info">
+														<li>Origin: One Punch Man</li>
+														<li>Gender: Female</li>
+														<li>Rating: B</li>
+														<li>Notes: Monster Goddess Psykos. Need I say any more?</li><br>
+													</ol>
+									</div>
 
 
 			<div id="ccontent">
@@ -161,15 +172,6 @@
 
 
 
-			<div id="ccontent">
-							<img class="auditorium" src="../../images/randomlove/characters/ps.png" style="width: 160px;"/>
-							<br><br><h3>Psykos </h3>            <ol class="playlist_info">
-								<li>Origin: One Punch Man</li>
-								<li>Gender: Female</li>
-								<li>Rating: B</li>
-								<li>Notes: Monster Goddess Psykos. Need I say any more?</li><br>
-							</ol>
-			</div>
 
 
 						<div id="ccontent">
@@ -185,44 +187,67 @@
 				</div>
 
 
+
 			<div id="ccontent">
-							<img class="auditorium" src="../../images/randomlove/characters/.png" style="width: 160px;"/>
-							<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
-								<li>Origin: Dark Souls</li>
+							<img class="auditorium" src="../../images/randomlove/characters/fb.png" style="width: 160px;"/>
+							<br><br><h3>Fubuki</h3>            <ol class="playlist_info">
+								<li>Origin: One Punch Man</li>
 								<li>Gender: Female</li>
-								<li>Rating: B-</li>
-								<li>Notes: </li><br>
+								<li>Rating: A</li>
+								<li>Notes: Her infeority complex is holding her back, stupid Tatsumaki</li><br>
 							</ol>
 			</div>
 			<div id="ccontent">
-							<img class="auditorium" src="../../images/randomlove/characters/.png" style="width: 160px;"/>
-							<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
-								<li>Origin: Dark Souls</li>
+							<img class="auditorium" src="../../images/randomlove/characters/gs.png" style="width: 160px;"/>
+							<br><br><h3>General Esdeath </h3>            <ol class="playlist_info">
+								<li>Origin: Akame Ga Kill</li>
 								<li>Gender: Female</li>
-								<li>Rating: B-</li>
-								<li>Notes: </li><br>
+								<li>Rating: B</li>
+								<li>Notes: I think this character is just bait for people like me eek, either way still love her</li><br>
 							</ol>
 			</div>
 			<div id="ccontent">
-							<img class="auditorium" src="../../images/randomlove/characters/.png" style="width: 160px;"/>
-							<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
-								<li>Origin: Dark Souls</li>
+							<img class="auditorium" src="../../images/randomlove/characters/th.png" style="width: 160px;"/>
+							<br><br><h3>Torhu</h3>            <ol class="playlist_info">
+								<li>Origin: Miss Kobayashi's Dragon Maid</li>
 								<li>Gender: Female</li>
-								<li>Rating: B-</li>
-								<li>Notes: </li><br>
-							</ol>
-			</div>
-			<div id="ccontent">
-							<img class="auditorium" src="../../images/randomlove/characters/.png" style="width: 160px;"/>
-							<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
-								<li>Origin: Dark Souls</li>
-								<li>Gender: Female</li>
-								<li>Rating: B-</li>
-								<li>Notes: </li><br>
+								<li>Rating: A</li>
+								<li>Notes: THE BEST SLICE OF ANIME THERE IS ♡</li><br>
 							</ol>
 			</div>
 
 
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/ph.png" style="width: 160px;"/>
+							<br><br><h3>Phos </h3>            <ol class="playlist_info">
+								<li>Origin: Land of the Lustrous</li>
+								<li>Gender: Female</li>
+								<li>Rating: C</li>
+								<li>Notes: Full name: Phosphophyllite, but it would have messed up the formatting sorry</li><br>
+							</ol>
+			</div>
+
+
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/ms.jpg" style="width: 160px;"/>
+							<br><br><h3>Miss Kobayashi</h3>            <ol class="playlist_info">
+								<li>Origin: Miss Kobayashi's Dragon Maid</li>
+								<li>Gender: Female</li>
+								<li>Rating: A</li>
+								<li>Notes: She's what I hope to be</li><br>
+							</ol>
+			</div>
+
+
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/ah.jpg" style="width: 160px;"/>
+							<br><br><h3>Ahri </h3>            <ol class="playlist_info">
+								<li>Origin: League of Legends</li>
+								<li>Gender: Female</li>
+								<li>Rating: B</li>
+								<li>Notes: Quality in looks and description! I just don't know league eek</li><br>
+							</ol>
+			</div>
 
 
 
@@ -243,6 +268,32 @@
 
 
 
+
+
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/9s.jpg" style="width: 160px;"/>
+							<br><br><h3>9s </h3>            <ol class="playlist_info">
+								<li>Origin: NieR: Automata</li>
+								<li>Gender: Male/Android</li>
+								<li>Rating: S</li>
+								<li>Notes: One of the few one this list that I cosplay, A QUALITY SOFT BOY UWU</li><br>
+							</ol>
+			</div>
+
+
+
+
+			<div id="ccontent">
+							<img class="auditorium" src="../../images/randomlove/characters/gf.png" style="width: 160px;"/>
+							<br><br><h3>Great Fairy</h3>            <ol class="playlist_info">
+								<li>Origin: Ocarina of Time</li>
+								<li>Gender: Female</li>
+								<li>Rating: B</li>
+								<li>Notes: What's not to like? Great>check Fairy>check</li><br>
+							</ol>
+
+
+	</div>
 
 
 
@@ -265,6 +316,7 @@
 												<li>Origin: Pokemon</li>
 												<li>Gender: Unknown</li>
 												<li>Rating: B</li><br>
+												<li>Notes: My fav pokemon!</li>
 											</ol>
 
 
@@ -279,7 +331,8 @@
 							<br><br><h3>Ada Lovelace</h3>            <ol class="playlist_info">
 								<li>Origin: Real Life</li>
 								<li>Gender: Female</li>
-								<li>Rating: B-</li><br>
+								<li>Rating: C-</li>
+								<li>Notes: My favorite Mathmetician!</li><br>
 							</ol>
 
 
@@ -291,7 +344,8 @@
 					<br><br><h3>Baby Slime</h3>            <ol class="playlist_info">
 						<li>Origin: Minecraft</li>
 						<li>Gender: Slime</li>
-						<li>Rating: C (i still love you baby slime im sorry)</li><br>
+						<li>Rating: C</li>
+						<li>Notes: My favorite Minecraft Mob!</li><br>
 					</ol>
 </div>
 
@@ -302,7 +356,8 @@
 							<br><br><h3>Black Luma</h3>            <ol class="playlist_info">
 								<li>Origin: Super Mario Galaxy</li>
 								<li>Gender: Luma</li>
-								<li>Rating: D</li><br>
+								<li>Rating: D</li>
+								<li>Notes: My favorite luma! Rosalina's Luma!</li><br>
 							</ol>
 
 
