--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -147,7 +147,15 @@
 														<li>Notes: Monster Goddess Psykos. Need I say any more?</li><br>
 													</ol>
 									</div>
-
+									<div id="ccontent">
+													<img class="auditorium" src="../../images/randomlove/characters/by.png" style="width: 160px;"/>
+													<br><br><h3>Bayonetta </h3>            <ol class="playlist_info">
+														<li>Origin: Bayonetta</li>
+														<li>Gender: Female</li>
+														<li>Rating: S</li>
+														<li>Notes: hhhhhhhot... and uh fun game yes</li><br>
+													</ol>
+									</div>
 
 			<div id="ccontent">
 							<img class="auditorium" src="../../images/randomlove/characters/te.jpg" style="width: 160px;"/>
@@ -270,6 +278,11 @@
 
 
 
+
+
+
+
+
 			<div id="ccontent">
 							<img class="auditorium" src="../../images/randomlove/characters/9s.jpg" style="width: 160px;"/>
 							<br><br><h3>9s </h3>            <ol class="playlist_info">
@@ -352,7 +365,7 @@
 
 
 			<div id="ccontent">
-							<img class="auditorium" src="../../images/randomlove/characters/lm.jpg" style="width: 160px;"/>
+							<img class="auditorium" src="../../images/randomlove/characters/lm.png" style="width: 160px;"/>
 							<br><br><h3>Black Luma</h3>            <ol class="playlist_info">
 								<li>Origin: Super Mario Galaxy</li>
 								<li>Gender: Luma</li>
