--- a/randomlove/languages/index.html
+++ b/randomlove/languages/index.html
@@ -51,21 +51,42 @@
 
 
 		<div id="ccontent">
-            <img class="auditorium" src="../../images/randomlove/musicals/en.jpg" style="width: 160px;"/>
+            <img class="auditorium" src="../../images/randomlove/languages/python.png" style="width: 160px;"/>
 						<br><br><h3>Python</h3>            <ol class="playlist_info">
-							<li>Classification: object oriented</li>
-							<li>blah</li>
-							<li>2b continuted</li><br>
+							<li>Classification: Interpreted, High-Level, General-Purpose </li>
+							<li>Paradigm: Multi-paradigm: functional, imperative, object-oriented, reflective</li><br>
             </ol>
-
-
-
         </div>
+				<div id="ccontent">
+								<img class="auditorium" src="../../images/randomlove/languages/html5.png" style="width: 160px;"/>
+								<br><br><h3>Html 5</h3>            <ol class="playlist_info">
+									<li>Classification: Hyperttext Markup Language</li>
+									<li>Paradigm: Declarative programming</li><br>
+								</ol>
+						</div>
+						<div id="ccontent">
+										<img class="auditorium" src="../../images/randomlove/languages/css3.png" style="width: 160px;"/>
+										<br><br><h3>CSS</h3>            <ol class="playlist_info">
+											<li>Classification: Cascading Style Sheets</li>
+											<li>Paradigm: Declarative, domain-specific programming</li><br>
+										</ol>
+								</div>
 
+								<div id="ccontent">
+												<img class="auditorium" src="../../images/randomlove/languages/js.jpg" style="width: 160px;"/>
+												<br><br><h3>JavaScript</h3>            <ol class="playlist_info">
+													<li>Classification: ECMAScript specifcation</li>
+													<li>Paradigm: Dynamic typing, prototype-based object-orientation, and first-class functions</li><br>
+												</ol>
+										</div>
 
-
-
-
+										<div id="ccontent">
+														<img class="auditorium" src="../../images/randomlove/languages/ae.png" style="width: 160px;"/>
+														<br><br><h3>English</h3>            <ol class="playlist_info">
+															<li>Classification: Spoke, Written</li>
+															<li>My first language</li><br>
+														</ol>
+												</div>
 
 
 
