--- a/randomlove/musicals/index.html
+++ b/randomlove/musicals/index.html
@@ -38,7 +38,7 @@
 
         <div id="content">
             <p>
-						here's a list of musicals i love that i rate on a scale of my favoriteness ~
+						here's a list of musicals i love that i rate on a scale of my favoriteness in no particular order ~
 						an incomplete list
             </p>
         </div>
@@ -62,12 +62,159 @@
 
         </div>
 
+				<div id="ccontent">
+		            <img class="auditorium" src="../../images/randomlove/musicals/deh.jpg" style="width: 160px;"/>
+								<br><br><h3>Dear Evan Hansen</h3>            <ol class="playlist_info">
+									<li>Producer: Steve Levenson</li>
+									<li>Release: 2015</li>
+									<li>Rating: Tasty</li><br>
+		            </ol>
 
 
 
+		        </div>
+
+						<div id="ccontent">
+				            <img class="auditorium" src="../../images/randomlove/musicals/ht.jpg" style="width: 160px;"/>
+										<br><br><h3>Heathers</h3>            <ol class="playlist_info">
+											<li>Producers: Kevin Murphy and Laurence O'Keefe</li>
+											<li>Release: 2014</li>
+											<li>Rating: Yummy</li><br>
+				            </ol>
 
 
 
+				        </div>
+
+								<div id="ccontent">
+						            <img class="auditorium" src="../../images/randomlove/musicals/hm.jpg" style="width: 160px;"/>
+												<br><br><h3>Hamilton</h3>            <ol class="playlist_info">
+													<li>Producer: Lin Manuel Miranda</li>
+													<li>Release: 2015</li>
+													<li>Rating: Taste For All</li><br>
+						            </ol>
+
+
+
+						        </div>
+
+										<div id="ccontent">
+								            <img class="auditorium" src="../../images/randomlove/musicals/bj.jpg" style="width: 160px;"/>
+														<br><br><h3>Beetlejuice</h3>            <ol class="playlist_info">
+															<li>Producers: Anthony King and Scott Brown</li>
+															<li>Release: 2018</li>
+															<li>Rating: Tangy But In Good Way</li><br>
+								            </ol>
+
+
+
+								        </div>
+
+												<div id="ccontent">
+										            <img class="auditorium" src="../../images/randomlove/musicals/aw.jpg" style="width: 160px;"/>
+																<br><br><h3>Spring Awakening</h3>            <ol class="playlist_info">
+																	<li>Producer: Steven Sater</li>
+																	<li>Release: 2006</li>
+																	<li>Rating: Delicious</li><br>
+										            </ol>
+
+
+
+										        </div>
+
+														<div id="ccontent">
+																		<img class="auditorium" src="../../images/randomlove/musicals/rc.jpg" style="width: 160px;"/>
+																		<br><br><h3>Carrie</h3>            <ol class="playlist_info">
+																			<li>Producer: Lawrence D. Cohen</li>
+																			<li>Release: 1988</li>
+																			<li>Rating: Spicy</li><br>
+																		</ol>
+																	</div>
+
+																	<div id="ccontent">
+																					<img class="auditorium" src="../../images/randomlove/musicals/g.jpg" style="width: 160px;"/>
+																					<br><br><h3>Mean Girls</h3>            <ol class="playlist_info">
+																						<li>Producer: Tina Fey</li>
+																						<li>Release: 2017</li>
+																						<li>Rating: Sweet</li><br>
+																					</ol>
+																				</div>
+
+													<div id="ccontent">
+																	<img class="auditorium" src="../../images/randomlove/musicals/bb.jpg" style="width: 160px;"/>
+																	<br><br><h3>Bat Boy</h3>            <ol class="playlist_info">
+																		<li>Producer: Joe Iconis</li>
+																		<li>Release: 1997</li>
+																		<li>Rating: Tart</li><br>
+																	</ol>
+																</div>
+																<div id="ccontent">
+																				<img class="auditorium" src="../../images/randomlove/musicals/sr.jpg" style="width: 160px;"/>
+																				<br><br><h3>Something Rotten!</h3>            <ol class="playlist_info">
+																					<li>Producer: John O'Farrell and Karey Kirkpatrick</li>
+																					<li>Release: 2015</li>
+																					<li>Rating: Ultra Flavorful</li><br>
+																				</ol>
+																			</div>
+
+														<div id="ccontent">
+																<img class="auditorium" src="../../images/randomlove/musicals/21.jpg" style="width: 160px;"/>
+																<br><br><h3>21 Chump Street</h3>            <ol class="playlist_info">
+																	<li>Producer: Lin-Manuel Miranda</li>
+																	<li>Release: 2014</li>
+																	<li>Rating: It Tastes</li><br>
+																</ol>
+															</div>
+															<div id="ccontent">
+																			<img class="auditorium" src="../../images/randomlove/musicals/ntn.jpg" style="width: 160px;"/>
+																			<br><br><h3>Next To Normal</h3>            <ol class="playlist_info">
+																				<li>Producer: Brian Yorkey</li>
+																				<li>Release: 2008</li>
+																				<li>Rating: Good Amount of Yum</li><br>
+																			</ol>
+																		</div>
+
+															<div id="ccontent">
+															<img class="auditorium" src="../../images/randomlove/musicals/lso.jpg" style="width: 160px;"/>
+															<br><br><h3>Little Shop of Horrors</h3>            <ol class="playlist_info">
+																<li>Producer: Howard Ashman</li>
+																<li>Release: 1982</li>
+																<li>Rating: Has Taste</li><br>
+															</ol>
+															</div>
+															<div id="ccontent">
+															<img class="auditorium" src="../../images/randomlove/musicals/ff.jpg" style="width: 160px;"/>
+															<br><br><h3>Falsettos</h3>            <ol class="playlist_info">
+																<li>Producer: James Lapine and William Finn</li>
+																<li>Release: 2016</li>
+																<li>Rating: Eh</li><br>
+															</ol>
+															</div>
+															<div id="ccontent">
+															<img class="auditorium" src="../../images/randomlove/musicals/fl.jpg" style="width: 160px;"/>
+															<br><br><h3>Footloose</h3>            <ol class="playlist_info">
+																<li>Producer: Dean Pitchford and Walter Bobbie</li>
+																<li>Release: 1998</li>
+																<li>Rating: Eh</li><br>
+															</ol>
+															</div>
+															<div id="ccontent">
+															<img class="auditorium" src="../../images/randomlove/musicals/ma.jpg" style="width: 160px;"/>
+															<br><br><h3>Matilda</h3>            <ol class="playlist_info">
+																<li>Producer: Dennis Kelly</li>
+																<li>Release: 2010</li>
+																<li>Rating: Eh</li><br>
+															</ol>
+															</div>
+
+															<div id="ccontent">
+															<img class="auditorium" src="../../images/randomlove/musicals/tt.jpg" style="width: 160px;"/>
+															<br><br><h3>The Book of Mormon</h3>            <ol class="playlist_info">
+																<li>Producer: Matt Stone, Robert Lopez, Trey Parker</li>
+																<li>Release: 2011</li>
+																<li>Rating: Taste</li><br>
+															</ol>
+															</div>
 
 
 
