removed shopping list

--- a/randomlove/random/index.html
+++ b/randomlove/random/index.html
@@ -57,12 +57,16 @@
 							<li>its like 96% of my wadrobe.</li>
 <br>
             </ol>
-
-
-
         </div>
 
-
+				<div id="ccontent">
+								<img class="auditorium" src="../../images/randomlove/random/pink.png" style="width: 160px;"/>
+								<br><br><h3>FavClr2:</h3>            <ol class="playlist_info">
+									<li>Pink ♡ (#ebc5e6)</li>
+									<li>its like 4% of my wadrobe.</li>
+				<br>
+								</ol>
+						</div>
 
 
 
