--- a/randomlove/shopping/index.html
+++ b/randomlove/shopping/index.html
@@ -41,6 +41,7 @@
 						here's a list of things i need to buy ~
 						an incomplete list
             </p>
+
         </div>
 				<div id="content2">
 					<div class="label2">
@@ -53,12 +54,17 @@
 		<div id="ccontent">
 
 						<h3>Tech</h3>            <ol class="playlist_info">
-							<li>ill add later im just getting the pages up</li>
-							<li>cr10s</li>	<br>
+							<li><a href="https://pimpmykeyboard.com/sa-ice-cap-keyset/">SA Ice Cap Ortholinear set </a></li>
+							<li><a href="https://www.amazon.com/dp/B07TB2NDCG/?coliid=I2X6ZY8MJUWCCN&colid=19EBDR20LXU2Y&psc=1&ref_=lv_ov_lig_dp_it">COSSCCI Handheld Airbrush Kit </a></li>
+							<li><a href="https://www.amazon.com/dp/B00ATJSD8I/?coliid=I22QK6275BUMPH&colid=19EBDR20LXU2Y&psc=1&ref_=lv_ov_lig_dp_it">Apple Barrel PROMOABI, Assorted Paints </a></li>
+							<li><a href="https://www.amazon.com/dp/B07MXB5M5K/?coliid=I1LD6NNNBB3Q2C&colid=19EBDR20LXU2Y&psc=0&ref_=lv_ov_lig_dp_it">45-Piece 80 To 3000 Grit Wet Dry Sandpaper </a></li>
+							<li><a href="https://pimpmykeyboard.com/sa-ice-cap-keyset/">SA Ice Cap Ortholinear set </a></li>
+							<li><a href="https://pimpmykeyboard.com/sa-ice-cap-keyset/">SA Ice Cap Ortholinear set </a></li>
+							<br>
             </ol>
 						<h3>Clothes</h3>            <ol class="playlist_info">
-							<li>pink rainboots and raincoat</li>
-							<li>yeah</li>	<br>
+							<li>Pink rainboots and raincoat</li>
+							<li>Ken Kaneki Cosplay</li>	<br>
 						</ol>
 
 
