--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
 			<img class="logo" src="images/home/ddd.gif" />
       <div class="row imgPixel">
 
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">3/29/20 </h3>
+          <p style="margin-bottom:30px;">NieR Replicant!! <br>NieR Reincarnation!!</p>
+        </div>
+
+
         <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">3/7/20 </h3>
