--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -366,7 +366,7 @@
 
 			<div id="ccontent">
 							<img class="auditorium" src="../../images/randomlove/characters/lm.png" style="width: 160px;"/>
-							<br><br><h3>Black Luma</h3>            <ol class="playlist_info">
+							<br><br><h3>Polari</h3>            <ol class="playlist_info">
 								<li>Origin: Super Mario Galaxy</li>
 								<li>Gender: Luma</li>
 								<li>Rating: D</li>
