--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <a href="/music" class="navi"><img src="images/nav/flow.png">music</a>
   	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>prod</strike></a>
     <a href="/concept" class="navi"><img src="images/nav/flow.png">concept</a>
-	<div style="margin:30px 0;">
+	<div style="margin:30px 0;">Type 'html5-boilerplate' in an HTML file and select the snippet from the auto suggestion dropdown to get the HTML boilerplate.
 	<a href="new.html"><img src="images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
 </div>
 
