--- a/art/graphic/index.html
+++ b/art/graphic/index.html
@@ -43,7 +43,7 @@
         </div>
 				<div id="content2">
 								<div class="label2">
-										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
+										<p><a href="https://relivesight.com/art/">Return Back A Page</a></p>
 								</div>
 						</div>
 
