--- a/art/index.html
+++ b/art/index.html
@@ -57,13 +57,25 @@ note: i cannot draw, so most all i do is digital
 
 				<div id="ccontent">
 								<img class="auditorium" src="../images/art/graphic/1.jpg" style="width: 160px;"/>
-								<br><br><h3>Graphic Design---</h3>            <ol class="playlist_info">
+								<br><br><h3>Graphic Design</h3>            <ol class="playlist_info">
 									<li>stuff i do on computer for fun~! <</li><br>
 								</ol>
 								<a href="/art/graphic" class="label3">CLICK TO SEE MY ATTEMPTS</a>
 
 
 						</div>
+
+
+
+                <div id="ccontent">
+                    <img class="auditorium" src="../images/art/draws/3.0.png" style="width: 160px;"/>
+                    <br><br><h3>Digital Draws</h3>            <ol class="playlist_info">
+                        <li>since i can't draw irl photoshop exists!~<</li><br>
+                    </ol>
+                    <a href="/art/draws" class="label3">CLICK TO SEE MY ATTEMPTS</a>
+
+
+                </div>
 
 
 
