--- a/art/graphic/index.html
+++ b/art/graphic/index.html
@@ -49,6 +49,24 @@
 
 
 
+
+            <div id="ccontent">
+              <img src="../../images/art/graphic/d1.png"style="width: 664px;"/>
+              <br><br><h3>albulm practice</h3>            <ol class="playlist_info">
+                <li>not to be used, just what im workin on to try and get better</li><br>
+              <img src="../../images/art/graphic/d2.png"style="width: 253px;"/>
+              <img src="../../images/art/graphic/d3.png"style="width: 253px;"/>
+              <li>also the one on the right was made entirely of photos i took from my desk, and it bit of magic~</li><br>
+  </ol>
+  
+          </div>
+
+
+
+
+
+
+
 		<div id="ccontent">
             <img src="../../images/art/graphic/cb1.png"style="width: 664px;"/>
 						<br><br><h3>Cyberboys - Mockup</h3>            <ol class="playlist_info">
