updating the artos

--- a/art/graphic/index.html
+++ b/art/graphic/index.html
@@ -37,7 +37,7 @@
             <div id="ccontent">
               <img src="../../images/art/graphic/d1.png"style="width: 664px;"/>
               <br><br><h3>albulm practice</h3>            <ol class="playlist_info">
-                <li>not to be used, just what im workin on to try and get better</li><br>
+                <li>not to be used, just what im workin on to try and get better, apparently all i do is fake albulm covers??? i never noticed that</li><br>
               <img src="../../images/art/graphic/d2.png"style="width: 253px;"/>
               <img src="../../images/art/graphic/d3.png"style="width: 253px;"/>
               <li>also the one on the right was made entirely of photos i took from my desk, and it bit of magic~</li><br>
@@ -84,6 +84,31 @@
 
 
 
+
+
+
+            <div id="ccontent">
+              <img src="../../images/art/graphic/ac/2.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/3.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/4.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/5.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/6.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/7.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/8.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/9.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/10.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/11.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/12.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/13.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/14.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/15.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/16.png"style="width: 160px;"/>
+              <img src="../../images/art/graphic/ac/17.png"style="width: 160px;"/>
+              <br><br><h3>Some Albulm Covers for Artists/Genres</h3>            <ol class="playlist_info">
+                <li>i have my own music application and wanted to make custom albulm covers for artists, was a bad idea, some of them are okay tho...</li><br>
+ </ol>
+
+          </div>
 
 
 
