--- a/art/index.html
+++ b/art/index.html
@@ -78,6 +78,29 @@ note: i cannot draw, so most all i do is digital
                 </div>
 
 
+                <div id="ccontent">
+                    <img class="auditorium" src="../images/art/wallpaper/1.png" style="width: 160px;"/>
+                    <br><br><h3>Wallpapers</h3>            <ol class="playlist_info">
+                        <li>I made these in PS but i mostly use very talented artists' works and just fit them together for my res~<</li><br>
+                    </ol>
+                    <a href="/art/wallpaper" class="label3">CLICK TO SEE MY ATTEMPTS</a>
+
+
+                </div>
+
+                <div id="ccontent">
+                    <img class="auditorium" src="../images/art/pxl/0.jpg" style="width: 160px;"/>
+                    <br><br><h3>Pixel Art</h3>            <ol class="playlist_info">
+                        <li>I wish I still had the mc/trra textures i made as a child, all we got is the trash stuff i did post-██████<</li><br>
+                    </ol>
+                    <a href="/art/pxl" class="label3">CLICK TO SEE MY ATTEMPTS</a>
+
+
+                </div>
+
+
+
+
 
         <div id="site_entry">
             <p>[ <a href="#">Back to Top</a> ]</p>
